完成后端管理员对文章的增删查改流程操作

--- a/frontallenway/fallenway/views/admin/index.html
+++ b/frontallenway/fallenway/views/admin/index.html
@@ -4,6 +4,7 @@
 </head>
 
 <body>
-    <a href = "admin/article/addArticle">添加文章</a>
+    <a href = "/admin/article/addArticle">添加文章</a>
+    <a href = "/admin/article/getAllArticles">查看文章</a>
 </body>
 </html>
