--- a/frontallenway/fallenway/views/admin/modifyArticle.html
+++ b/frontallenway/fallenway/views/admin/modifyArticle.html
@@ -17,7 +17,7 @@
     <form id = "addForm" action = "addArticle/doAdd" method = "post">
 	<div style="margin:10px;">
 		<div style="float:left">  
-			Title:&nbsp;&nbsp;<input class = "form-control" style="display:inline;width:300px;" type = "text" id="title" name = "title">
+            Title:&nbsp;&nbsp;<input class = "form-control" style="display:inline;width:300px;" type = "text" id="title" name = "title" value = "{{data.article.title}}">
 		</div>
 		<div style="float:right">  
 			<a class="btn btn-primary" href="/">Back</a>
@@ -28,7 +28,7 @@
 		
 	</div>
 	<div id="editormd" style="min-height:600px;">
-	    <textarea name = "mdData" style="display:none;" id="mdData" >### Hello Editor.md !</textarea>
+        <textarea name = "mdData" style="display:none;" id="mdData" >{{data.article.content}}</textarea>
 	</div>
 
 	<div style="margin-left:10px">
@@ -103,19 +103,6 @@
 		    	}
 
                 $('#addForm').submit();
-				<!--$.post(url,data-->
-                        <!--,function(data,status){-->
-
-					<!--console.log("data1,status = " + data + " " + status);-->
-			  <!--      if (status == "success" && data == "succe-->ss") {
-						
-						<!--var url = "/"-->
-						<!--window.location.href = url;-->
-					<!--} else {-->
-						<!--alert("服务器保存出错，请备份稍后再次保存！");-->
-			  <!--[>  <]    }-->
-				<!--}-->
-                <!--)-->
 	    	} else {
 	    		;
 	    	}
