修改前端游客主页改用统一模板

--- a/frontallenway/fallenway/views/visitor/common/header_leftSide.html
+++ b/frontallenway/fallenway/views/visitor/common/header_leftSide.html
@@ -30,7 +30,7 @@
                     <li><a href = "/"><i class = "fa fa-angle-right"></i>主页 Index </a></li>
 
                     {% for classify in data.classifies %}
-                        <li><a href = "/"><i class = "fa fa-angle-right"></li>{{classify.name}} {{classify.articleNum}}</a></li>
+                        <li><a href = "/"><i class = "fa fa-angle-right"></i>{{classify.name}} ({{classify.articleNum}})</a></li>
                     {% endfor %}
 
                     <li><a href = "/aboutme"><i class = "fa fa-angle-right"></i>关于 About Me </a></li>
