完成前端游客文章详情页面的样式调整

--- a/frontallenway/fallenway/views/admin/getAllArticles.html
+++ b/frontallenway/fallenway/views/admin/getAllArticles.html
@@ -14,7 +14,7 @@
             {% autoescape false %}{{article.title}}{% endautoescape %}
         </td>
         <td>
-            {% autoescape false %}{{article.content |}}{% endautoescape %}
+            {% autoescape false %}{{article.content}}{% endautoescape %}
         </td>
         <td>
             <form id = "deleteArticleForm" action = "deleteArticle" method = "post">
