--- a/frontallenway/fallenway/views/visitor/common/header.html
+++ b/frontallenway/fallenway/views/visitor/common/header.html
@@ -40,6 +40,8 @@
             </div>
         </div>
     
+    <a href="#top" id="scroll-top" title="Back to Top"><i class="fa fa-angle-up" style = "padding-top:7px"></i></a>
+    
     {% block subIncludeFileAfterBody %}{% endblock %}
     </body>
 </html>
