新增管理员管理的页面（文章部分）

--- a/frontallenway/fallenway/views/admin/index.html
+++ b/frontallenway/fallenway/views/admin/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-</head>
+{% extends 'common/header_leftSide.html' %}
 
-<body>
-    <a href = "/admin/article/addArticle">添加文章</a>
-    <a href = "/admin/article/getAllArticles">查看文章</a>
-</body>
-</html>
+
+{% block subMainContent  %}
+    This is Index.
+{% endblock %}
