--- a/frontallenway/fallenway/views/visitor/articleDetail.html
+++ b/frontallenway/fallenway/views/visitor/articleDetail.html
@@ -175,46 +175,60 @@
             </article>
         </div><!-- End .blog-related-carousel -->
         <div class="comments">
-            <h3 class="mb35 title-underblock custom">3 Comment(s)</h3>
+            <h3 class="mb35 title-underblock custom">{{data.article.commentNum}} Comment(s)</h3>
             <ul class="comments-list media-list">
+                {% for comment in data.article.comments %}
                 <li class="media">
                     <div class="media-left">
                         <img class="media-object img-circle" src="/images/blog/dean.jpg" alt="Dean Hunter">
                     </div><!-- End .media-left -->
                     <div class="media-body">
-                        <h4 class="media-heading">Dean Hunter<span class="comment-date">(10 February 2015 - 17:25)</span></h4>
+                        <h4 class="media-heading">{{comment.name}}<span class="comment-date">({{comment.createDate}})</span></h4>
                         <a href="#" class="reply-link">Reply </a>
-                        <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in fac sed odio dui.</p>
-                        <ul>
-                            <li class="media">
-                                <div class="media-left">
-                                    <img class="media-object img-circle" src="/images/blog/sarah.jpg" alt="Sarah Hunter">
-                                </div><!-- End .media-left -->
-                                <div class="media-body">
-                                    <h4 class="media-heading">Sarah Hunter<span class="comment-date">(11 February 2015 - 09:11)</span></h4>
-                                    <a href="#" class="reply-link">Reply </a>
-                                    <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in fac sed odio dui.</p>
-                                </div><!-- End .media-body -->
-                            </li>
-                        </ul>
+                        <p>{{comment.content}}</p>
                     </div><!-- End .media-body -->
                 </li>
-                <li class="media">
-                    <div class="media-left">
-                        <img class="media-object img-circle" src="/images/blog/john.jpg" alt="Sarah Hunter">
-                    </div><!-- End .media-left -->
-                    <div class="media-body">
-                        <h4 class="media-heading">John Doe<span class="comment-date">(08 February 2015 - 21:11)</span></h4>
-                        <a href="#" class="reply-link">Reply </a>
-                        <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in fac sed odio dui.</p>
-                    </div><!-- End .media-body -->
-                </li>
+                {% endfor %}
+
+                <!--<li class="media">-->
+                    <!--<div class="media-left">-->
+                        <!--<img class="media-object img-circle" src="/images/blog/dean.jpg" alt="Dean Hunter">-->
+                    <!--</div>[> End .media-left <]-->
+                    <!--<div class="media-body">-->
+                        <!--<h4 class="media-heading">Dean Hunter<span class="comment-date">(10 February 2015 - 17:25)</span></h4>-->
+                        <!--<a href="#" class="reply-link">Reply </a>-->
+                        <!--<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in fac sed odio dui.</p>-->
+                        <!--<ul>-->
+                            <!--<li class="media">-->
+                                <!--<div class="media-left">-->
+                                    <!--<img class="media-object img-circle" src="/images/blog/sarah.jpg" alt="Sarah Hunter">-->
+                                <!--</div>[> End .media-left <]-->
+                                <!--<div class="media-body">-->
+                                    <!--<h4 class="media-heading">Sarah Hunter<span class="comment-date">(11 February 2015 - 09:11)</span></h4>-->
+                                    <!--<a href="#" class="reply-link">Reply </a>-->
+                                    <!--<p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in fac sed odio dui.</p>-->
+                                <!--</div>[> End .media-body <]-->
+                            <!--</li>-->
+                        <!--</ul>-->
+                    <!--</div>[> End .media-body <]-->
+                <!--</li>-->
+                <!--<li class="media">-->
+                    <!--<div class="media-left">-->
+                        <!--<img class="media-object img-circle" src="/images/blog/john.jpg" alt="Sarah Hunter">-->
+                    <!--</div>[> End .media-left <]-->
+                    <!--<div class="media-body">-->
+                        <!--<h4 class="media-heading">John Doe<span class="comment-date">(08 February 2015 - 21:11)</span></h4>-->
+                        <!--<a href="#" class="reply-link">Reply </a>-->
+                        <!--<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in fac sed odio dui.</p>-->
+                    <!--</div>[> End .media-body <]-->
+                <!--</li>-->
             </ul>
         </div><!-- End .comments -->
                         
         <div id="respond" class="comment-respond">
             <h3 class="mb30 title-underblock custom">Leave a Comment</h3>
-            <form action="#" method="post">
+            <form action="/visitor/article/leaveMsg" method="post">
+                <input type = "hidden" value = "{{data.article.id}}" name = "id">
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="form-group">
@@ -231,7 +245,7 @@
                 </div><!-- End .row -->
                 <div class="form-group">
                     <label for="message" class="input-desc">Message</label>
-                    <textarea class="form-control" rows="6" id="message" name="message" placeholder="Your Message" required></textarea>
+                    <textarea class="form-control" rows="6" id="message" name="content" placeholder="Your Message" required></textarea>
                 </div><!-- End .from-group -->
 
                 <div class="form-group">
