--- a/frontallenway/fallenway/views/visitor/common/header.html
+++ b/frontallenway/fallenway/views/visitor/common/header.html
@@ -16,8 +16,8 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
-                                <h1>Allen Way <small class="hidden-xs"></small></h1>
-                                <p class="page-header-desc">Talk is cheap , show me your code !</p>
+                                <h1><a href = "/">Allen Way </a><small class="hidden-xs"></small></h1>
+                                <p class="page-header-desc">Talk is cheap , show me the code !</p>
                             </div>
                             <div class="col-md-6">
                                 <ol class="breadcrumb">
