--- a/frontallenway/fallenway/views/visitor/index.html
+++ b/frontallenway/fallenway/views/visitor/index.html
@@ -10,7 +10,7 @@
             <footer class="entry-footer clearfix">
                 <span class="entry-cats">
                     <span class="entry-label">Categories:</span>
-                    <a href="#">{{article.tags[0].name}}</a>
+                    <a href="#">{{article.classifyName}}</a>
                 </span><!-- End .entry-tags -->
                 <span class="entry-separator">/</span>
                 <a href="#" class="entry-comments">10 Comments</a>
